Updated Responsiveness